--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
     <div id="anzeigen-container"></div>
     <button id="neue-anzeige">Neue Anzeige hinzufügen</button>
     <div id="anzeige-form-container" class="hidden">
-        <form id="anzeige-form" enctype="multipart/form-data">
+        <form id="anzeige-form" enctype="multipart/form-data" >
             <img src="" alt="Bild" id="BildLink-preview" style="width: 200px; height: auto;">
             <input type="hidden" name="WohnungId" id="WohnungId">
             <label>Stadt: <input type="text" name="Stadt" id="Stadt"></label>
@@ -28,7 +28,10 @@
             <label>Beschreibung: <textarea name="Beschreibung" id="Beschreibung"></textarea></label>
             <label>Haustiere: <input type="text" name="Haustiere" id="Haustiere"></label>
             <label>Baujahr: <input type="number" name="Baujahr" id="Baujahr"></label>
-             <label>Bild: <input type="file" id="file-input" name="file-input"></label>
+            <label>Wohnungstype: <input type="number" name="Wohnungstype" id="Wohnungstype"></label>
+            
+            <label>Bild: <input type="file" id="file-input" name="file-input"></label>
+           
       <!--       <input type="hidden" name="BildLink" id="BildLink">-->
 
             <button type="submit">Speichern</button>
