--- a/html/footer_cookies.html
+++ b/html/footer_cookies.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cookies</title>
-    <link rel="stylesheet" href="../styles/footer_cookies.css" />
+    <link rel="stylesheet" href="./styles/footer_cookies.css" />
   </head>
   <body>
     <header>
@@ -50,7 +50,7 @@
         <p>
           Wenn Sie Fragen zu unserer Cookie-Richtlinie haben, wenden Sie sich
           bitte an
-          <a href="contact.html">kontaktieren Sie uns</a>.
+          <a href="./pages/KontaktSeite.php">kontaktieren Sie uns</a>.
         </p>
       </section>
     </main>
