--- a/html/footer_privacy_policy.html
+++ b/html/footer_privacy_policy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Datenschutz</title>
-    <link rel="stylesheet" href="../styles/footer_privacy_policy.css" />
+    <link rel="stylesheet" href="./styles/footer_privacy_policy.css" />
     <!-- Link to your CSS -->
   </head>
   <body>
