--- a/html/footer_read_more.html
+++ b/html/footer_read_more.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Us</title>
-    <link rel="stylesheet" href="../styles/footer_read_more.css" />
+    <link rel="stylesheet" href="./styles/footer_read_more.css" />
   </head>
   <body>
     <div class="container">
