--- a/html/footer_terms.html
+++ b/html/footer_terms.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Geschäftsbedingungen</title>
-    <link rel="stylesheet" href="../styles/footer_terms.css" />
+    <link rel="stylesheet" href="./styles/footer_terms.css" />
   </head>
   <body>
     <header>
